--- a/desafio01/Do zero/desafio01.html
+++ b/desafio01/Do zero/desafio01.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anúncio Smart TV</title>
+    <link rel="stylesheet" href="desafio01.css">
 </head>
 <body>
     <figure>
@@ -13,17 +14,18 @@
         </figcaption>
     </figure>
     
-    <h1>Smart TV 75" da marca XYZ</h1>
+    <h1>Smart TV <span class="realce-valor">75"</span> da marca XYZ</h1>
     <a href="#">Quero comprar agora mesmo!</a>
     <h2>Preços</h2>
-    <p><strong>R$ 4.999</strong> ou 12xR$ 416,58</p>
-    <p><b>Desconto de 10%</b> no PIX</p>
+    <p><strong class="realce-preco01">R$ 4.999</strong> ou 12xR$ 416,58</p>
+    <p><span class="realce-p">Desconto de 10%</span> no PIX</p>
 
     <hr>
 
     <h2>Condições</h2>
-    <p>Parcelamento <i>sem juros</i></p>
-    <p><em>Frete grátis</em></p>
+
+    <p>Parcelamento <span class="realce-italico">sem juros</span></p>
+    <p><em class="realce-underline">Frete grátis</em></p>
 
     <hr>
 
